// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`py strands agent react connection generator > should generate OpenAPI spec script scoped to the agent > agent_openapi.py 1`] = `
"from agent_project.agent.main import app
import json
import os
import sys

os.makedirs(os.path.dirname(sys.argv[1]), exist_ok=True)
with open(sys.argv[1], "w") as f:
    json.dump(app.openapi(), f)
"
`;

exports[`py strands agent react connection generator > should generate provider component > TestAgentProvider.tsx 1`] = `
"import { createContext, FC, PropsWithChildren, useMemo } from 'react';
import { TestAgent } from '../generated/test-agent/client.gen';
import { TestAgentOptionsProxy } from '../generated/test-agent/options-proxy.gen';
import { useRuntimeConfig } from '../hooks/useRuntimeConfig';
import { useSigV4 } from '../hooks/useSigV4';

/**
 * Build an HTTP URL from a Bedrock AgentCore Runtime ARN
 */
function buildAgentCoreHttpUrl(agentRuntimeArn: string): string {
  const region = agentRuntimeArn.split(':')[3];
  return \`https://bedrock-agentcore.\${region}.amazonaws.com/runtimes/\${encodeURIComponent(agentRuntimeArn)}\`;
}

export const TestAgentContext = createContext<
  TestAgentOptionsProxy | undefined
>(undefined);

export const TestAgentClientContext = createContext<TestAgent | undefined>(
  undefined,
);

const useCreateTestAgentClient = (): TestAgent => {
  const runtimeConfig = useRuntimeConfig();
  const agentRuntimeValue = runtimeConfig.agentRuntimes.TestAgent;
  const apiUrl = agentRuntimeValue.startsWith('arn:')
    ? buildAgentCoreHttpUrl(agentRuntimeValue)
    : agentRuntimeValue;
  const sigv4Client = useSigV4();
  return useMemo(
    () =>
      new TestAgent({
        url: apiUrl,
        fetch: sigv4Client.fetch,
      }),
    [apiUrl, sigv4Client],
  );
};

export const TestAgentProvider: FC<PropsWithChildren> = ({ children }) => {
  const client = useCreateTestAgentClient();
  const optionsProxy = useMemo(
    () => new TestAgentOptionsProxy({ client }),
    [client],
  );

  return (
    <TestAgentClientContext.Provider value={client}>
      <TestAgentContext.Provider value={optionsProxy}>
        {children}
      </TestAgentContext.Provider>
    </TestAgentClientContext.Provider>
  );
};

export default TestAgentProvider;
"
`;

exports[`py strands agent react connection generator > should handle Cognito auth option > TestAgentProvider-Cognito.tsx 1`] = `
"import { createContext, FC, PropsWithChildren, useMemo } from 'react';
import { TestAgent } from '../generated/test-agent/client.gen';
import { TestAgentOptionsProxy } from '../generated/test-agent/options-proxy.gen';
import { useRuntimeConfig } from '../hooks/useRuntimeConfig';
import { useAuth } from 'react-oidc-context';

/**
 * Build an HTTP URL from a Bedrock AgentCore Runtime ARN
 */
function buildAgentCoreHttpUrl(agentRuntimeArn: string): string {
  const region = agentRuntimeArn.split(':')[3];
  return \`https://bedrock-agentcore.\${region}.amazonaws.com/runtimes/\${encodeURIComponent(agentRuntimeArn)}\`;
}

export const TestAgentContext = createContext<
  TestAgentOptionsProxy | undefined
>(undefined);

export const TestAgentClientContext = createContext<TestAgent | undefined>(
  undefined,
);

const useCreateTestAgentClient = (): TestAgent => {
  const runtimeConfig = useRuntimeConfig();
  const agentRuntimeValue = runtimeConfig.agentRuntimes.TestAgent;
  const apiUrl = agentRuntimeValue.startsWith('arn:')
    ? buildAgentCoreHttpUrl(agentRuntimeValue)
    : agentRuntimeValue;
  const auth = useAuth();
  const user = auth?.user;
  const cognitoClient: typeof fetch = (url, init) => {
    const headers = new Headers(init?.headers);
    headers.set('Authorization', \`Bearer \${user?.id_token}\`);
    return fetch(url, { ...init, headers });
  };
  return useMemo(
    () =>
      new TestAgent({
        url: apiUrl,
        fetch: cognitoClient,
      }),
    [apiUrl, cognitoClient],
  );
};

export const TestAgentProvider: FC<PropsWithChildren> = ({ children }) => {
  const client = useCreateTestAgentClient();
  const optionsProxy = useMemo(
    () => new TestAgentOptionsProxy({ client }),
    [client],
  );

  return (
    <TestAgentClientContext.Provider value={client}>
      <TestAgentContext.Provider value={optionsProxy}>
        {children}
      </TestAgentContext.Provider>
    </TestAgentClientContext.Provider>
  );
};

export default TestAgentProvider;
"
`;

exports[`py strands agent react connection generator > should handle IAM auth option > TestAgentProvider-IAM.tsx 1`] = `
"import { createContext, FC, PropsWithChildren, useMemo } from 'react';
import { TestAgent } from '../generated/test-agent/client.gen';
import { TestAgentOptionsProxy } from '../generated/test-agent/options-proxy.gen';
import { useRuntimeConfig } from '../hooks/useRuntimeConfig';
import { useSigV4 } from '../hooks/useSigV4';

/**
 * Build an HTTP URL from a Bedrock AgentCore Runtime ARN
 */
function buildAgentCoreHttpUrl(agentRuntimeArn: string): string {
  const region = agentRuntimeArn.split(':')[3];
  return \`https://bedrock-agentcore.\${region}.amazonaws.com/runtimes/\${encodeURIComponent(agentRuntimeArn)}\`;
}

export const TestAgentContext = createContext<
  TestAgentOptionsProxy | undefined
>(undefined);

export const TestAgentClientContext = createContext<TestAgent | undefined>(
  undefined,
);

const useCreateTestAgentClient = (): TestAgent => {
  const runtimeConfig = useRuntimeConfig();
  const agentRuntimeValue = runtimeConfig.agentRuntimes.TestAgent;
  const apiUrl = agentRuntimeValue.startsWith('arn:')
    ? buildAgentCoreHttpUrl(agentRuntimeValue)
    : agentRuntimeValue;
  const sigv4Client = useSigV4();
  return useMemo(
    () =>
      new TestAgent({
        url: apiUrl,
        fetch: sigv4Client.fetch,
      }),
    [apiUrl, sigv4Client],
  );
};

export const TestAgentProvider: FC<PropsWithChildren> = ({ children }) => {
  const client = useCreateTestAgentClient();
  const optionsProxy = useMemo(
    () => new TestAgentOptionsProxy({ client }),
    [client],
  );

  return (
    <TestAgentClientContext.Provider value={client}>
      <TestAgentContext.Provider value={optionsProxy}>
        {children}
      </TestAgentContext.Provider>
    </TestAgentClientContext.Provider>
  );
};

export default TestAgentProvider;
"
`;

exports[`py strands agent react connection generator > should instrument providers in main.tsx > main.tsx 1`] = `
"import TestAgentProvider from './components/TestAgentProvider';
import QueryClientProvider from './components/QueryClientProvider';
import RuntimeConfigProvider from './components/RuntimeConfig';

import { RouterProvider } from '@tanstack/react-router';

const App = () => <RouterProvider router={router} />;

export function Main() {
  return (
    <RuntimeConfigProvider>
      <QueryClientProvider>
        <TestAgentProvider>
          <App />
        </TestAgentProvider>
      </QueryClientProvider>
    </RuntimeConfigProvider>
  );
}
"
`;

exports[`py strands agent react connection generator - AG-UI protocol > should generate a shared AguiProvider and a per-agent hook for AG-UI agents > AguiProvider.tsx 1`] = `
"import { useAguiTestAgent } from '../hooks/useAguiTestAgent';
import { CopilotKitProvider } from '@copilotkit/react-core/v2';
import '@copilotkit/react-core/v2/styles.css';
import { type FC, type PropsWithChildren, useMemo } from 'react';
import type { AbstractAgent } from '@ag-ui/client';

export const AguiProvider: FC<PropsWithChildren> = ({ children }) => {
  const testAgentAgents = useAguiTestAgent();
  const selfManagedAgents = useMemo<Record<string, AbstractAgent>>(
    () => ({ ...testAgentAgents }),
    [testAgentAgents],
  );

  return (
    <CopilotKitProvider selfManagedAgents={selfManagedAgents}>
      {children}
    </CopilotKitProvider>
  );
};

export default AguiProvider;
"
`;

exports[`py strands agent react connection generator - AG-UI protocol > should generate a shared AguiProvider and a per-agent hook for AG-UI agents > useAguiTestAgent.tsx 1`] = `
"import { HttpAgent } from '@ag-ui/client';
import type { AbstractAgent, RunAgentInput } from '@ag-ui/client';
import { Observable } from 'rxjs';
import { useMemo } from 'react';
import { useRuntimeConfig } from './useRuntimeConfig';
import { useSigV4, type SigV4Client } from './useSigV4';

function buildAgentCoreUrl(agentRuntimeArn: string): string {
  const region = agentRuntimeArn.split(':')[3];
  return \`https://bedrock-agentcore.\${region}.amazonaws.com/runtimes/\${encodeURIComponent(agentRuntimeArn)}/invocations?qualifier=DEFAULT\`;
}

// AgentCore session ids must be at least 33 characters.
function agentCoreSessionId(input: RunAgentInput): string {
  return (input.threadId ?? '').padEnd(33, '0');
}

class SigV4HttpAgent extends HttpAgent {
  sigV4Client: SigV4Client;

  constructor(
    config: ConstructorParameters<typeof HttpAgent>[0],
    sigV4Client: SigV4Client,
  ) {
    super(config);
    this.sigV4Client = sigV4Client;
  }

  protected override requestInit(input: RunAgentInput): RequestInit {
    const init = super.requestInit(input);
    init.headers = {
      ...(init.headers as Record<string, string>),
      'X-Amzn-Bedrock-AgentCore-Runtime-Session-Id': agentCoreSessionId(input),
    };
    return init;
  }

  // Remove this override once https://github.com/ag-ui-protocol/ag-ui/issues/1316 is fixed.
  // eslint-disable-next-line @typescript-eslint/no-explicit-any
  override run(input: RunAgentInput): any {
    const sigV4Fetch = this.sigV4Client.fetch as typeof window.fetch;
    // eslint-disable-next-line @typescript-eslint/no-explicit-any
    return new Observable<any>((subscriber) => {
      const originalFetch = window.fetch;
      window.fetch = sigV4Fetch;
      const sub = super.run(input).subscribe(subscriber);
      window.fetch = originalFetch;
      return () => sub.unsubscribe();
    });
  }

  override clone(): SigV4HttpAgent {
    const cloned = super.clone() as SigV4HttpAgent;
    cloned.sigV4Client = this.sigV4Client;
    return cloned;
  }
}

export const useAguiTestAgent = (): Record<string, AbstractAgent> => {
  const runtimeConfig = useRuntimeConfig();
  const agentRuntimeValue = runtimeConfig.agentRuntimes.TestAgent;
  const sigv4 = useSigV4();

  const url = useMemo(
    () =>
      agentRuntimeValue.startsWith('arn:')
        ? buildAgentCoreUrl(agentRuntimeValue)
        : agentRuntimeValue,
    [agentRuntimeValue],
  );

  return useMemo((): Record<string, AbstractAgent> => {
    const agent = new SigV4HttpAgent({ url }, sigv4);

    return { agent: agent };
  }, [url, sigv4]);
};
"
`;

exports[`py strands agent react connection generator - AG-UI protocol > should register multiple AG-UI agents in the shared AguiProvider > AguiProvider-multi-agent.tsx 1`] = `
"import { useAguiResearchAgent } from '../hooks/useAguiResearchAgent';
import { useAguiTestAgent } from '../hooks/useAguiTestAgent';
import { CopilotKitProvider } from '@copilotkit/react-core/v2';
import '@copilotkit/react-core/v2/styles.css';
import { type FC, type PropsWithChildren, useMemo } from 'react';
import type { AbstractAgent } from '@ag-ui/client';

export const AguiProvider: FC<PropsWithChildren> = ({ children }) => {
  const testAgentAgents = useAguiTestAgent();
  const researchAgentAgents = useAguiResearchAgent();
  const selfManagedAgents = useMemo<Record<string, AbstractAgent>>(
    () => ({ ...testAgentAgents, ...researchAgentAgents }),
    [testAgentAgents, researchAgentAgents],
  );

  return (
    <CopilotKitProvider selfManagedAgents={selfManagedAgents}>
      {children}
    </CopilotKitProvider>
  );
};

export default AguiProvider;
"
`;

exports[`py strands agent react connection generator - AG-UI themed CopilotKit > should vend the cloudscape-themed copilot components when uxProvider is Cloudscape > cloudscape-theme-index.tsx 1`] = `
"import {
  CopilotChat as CopilotChatBase,
  CopilotSidebar as CopilotSidebarBase,
  CopilotPopup as CopilotPopupBase,
  type CopilotChatProps,
  type CopilotSidebarProps,
  type CopilotPopupProps,
} from '@copilotkit/react-core/v2';
import { CloudscapeAssistantMessage } from './CloudscapeAssistantMessage';
import { CloudscapeUserMessage } from './CloudscapeUserMessage';
import { CloudscapeChatInput } from './CloudscapeChatInput';
import { CloudscapeCursor } from './CloudscapeCursor';
import './copilot.css';

/**
 * Slot overrides that style the CopilotKit chat components with Cloudscape
 * {@link https://cloudscape.design/components/chat-bubble/ ChatBubble},
 * {@link https://cloudscape.design/components/prompt-input/ PromptInput} and
 * {@link https://cloudscape.design/components/avatar/ Avatar} components so
 * the chat matches the rest of a Cloudscape UI.
 *
 * Instantiate the re-exported {@link CopilotChat}, {@link CopilotSidebar} or
 * {@link CopilotPopup} from this module to pick up the theme automatically.
 * Per-chat slot overrides still win — anything passed in as a prop is
 * applied on top of the themed defaults.
 *
 * CopilotKit types the slot values against the default component (with its
 * static sub-components attached), so replacement FCs are cast to \`any\` when
 * assigned to the theme config.
 */
/* eslint-disable @typescript-eslint/no-explicit-any */
export const cloudscapeCopilotTheme = {
  messageView: {
    assistantMessage: CloudscapeAssistantMessage as any,
    userMessage: CloudscapeUserMessage as any,
    cursor: CloudscapeCursor as any,
    className: 'copilotkit-cloudscape-messages',
  },
  input: CloudscapeChatInput as any,
} as const;
/* eslint-enable @typescript-eslint/no-explicit-any */

export const CopilotChat = (props: CopilotChatProps) => (
  <CopilotChatBase {...cloudscapeCopilotTheme} {...props} />
);

export const CopilotSidebar = (props: CopilotSidebarProps) => (
  <CopilotSidebarBase {...cloudscapeCopilotTheme} {...props} />
);

export const CopilotPopup = (props: CopilotPopupProps) => (
  <CopilotPopupBase {...cloudscapeCopilotTheme} {...props} />
);

export {
  CloudscapeAssistantMessage,
  CloudscapeUserMessage,
  CloudscapeChatInput,
  CloudscapeCursor,
};
"
`;

exports[`py strands agent react connection generator - AG-UI themed CopilotKit > should vend the default (unstyled) copilot theme when uxProvider is None > default-theme-index.tsx 1`] = `
"export {
  CopilotChat,
  CopilotSidebar,
  CopilotPopup,
} from '@copilotkit/react-core/v2';
"
`;

exports[`py strands agent react connection generator - AG-UI themed CopilotKit > should vend the shadcn-themed copilot components and shared shadcn primitives when uxProvider is Shadcn > shadcn-theme-index.tsx 1`] = `
"import {
  CopilotChat as CopilotChatBase,
  CopilotSidebar as CopilotSidebarBase,
  CopilotPopup as CopilotPopupBase,
  type CopilotChatProps,
  type CopilotSidebarProps,
  type CopilotPopupProps,
} from '@copilotkit/react-core/v2';
import { ShadcnAssistantMessage } from './ShadcnAssistantMessage';
import { ShadcnUserMessage } from './ShadcnUserMessage';
import { ShadcnChatInput } from './ShadcnChatInput';
import { ShadcnCursor } from './ShadcnCursor';

/**
 * Slot overrides that style the CopilotKit chat components using shadcn/ui
 * primitives (\`Avatar\`, \`Button\`, \`Textarea\`, ...) plus Tailwind prose
 * styling. Instantiate the re-exported {@link CopilotChat},
 * {@link CopilotSidebar} or {@link CopilotPopup} from this module to pick up
 * the theme automatically. Per-chat slot overrides still win because the
 * theme is passed as defaults before the caller's props.
 *
 * CopilotKit types the slot values against the default component (with its
 * static sub-components attached), so replacement FCs are cast to \`any\` when
 * assigned to the theme config.
 */
/* eslint-disable @typescript-eslint/no-explicit-any */
export const shadcnCopilotTheme = {
  messageView: {
    assistantMessage: ShadcnAssistantMessage as any,
    userMessage: ShadcnUserMessage as any,
    cursor: ShadcnCursor as any,
    className: 'flex flex-col gap-3 px-4 py-6',
  },
  input: ShadcnChatInput as any,
} as const;
/* eslint-enable @typescript-eslint/no-explicit-any */

export const CopilotChat = (props: CopilotChatProps) => (
  <CopilotChatBase {...shadcnCopilotTheme} {...props} />
);

export const CopilotSidebar = (props: CopilotSidebarProps) => (
  <CopilotSidebarBase {...shadcnCopilotTheme} {...props} />
);

export const CopilotPopup = (props: CopilotPopupProps) => (
  <CopilotPopupBase {...shadcnCopilotTheme} {...props} />
);

export {
  ShadcnAssistantMessage,
  ShadcnUserMessage,
  ShadcnChatInput,
  ShadcnCursor,
};
"
`;
